frontend/src/components/popuppanel.module.css
.main {
	position: fixed;
	left: 30%;
	top: 25%;
	/* transform: translate(-50%, -50%); */
	z-index: 8;
	width: 500px;
	background-color: black;
	border-radius: 25px;
	padding: 5px;
	padding-bottom: 25px;
	display: block;
}

.overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	background-color: rgba(0, 23, 36, 0.8);
	overflow: hidden;
	z-index: 5;
}

.paddedContainer {
	max-width: 37.5rem;
	text-align: center;
	font-size: 40px;
}

